--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,4 @@
-{% extends 'default.html' %}
+{% extends 'sections.html' %}
 
-{% block content %}
-    <a id="section_1"></a>
-    <div class="hero is-dark">
-        <div class="hero-body">
-
-        </div>
-    </div>
-
-    <a id="section_2"></a>
-    <div class="hero is-info">
-        <div class="hero-body">
-
-        </div>
-    </div>
+{% block section0_content %}
 {% endblock %}
