Dynamically generate right navbar Using the sections variable In the appropriate file

--- a/templates/default.html
+++ b/templates/default.html
@@ -31,16 +31,7 @@
             </a>
         </div>
 
-        <div id="main_navbar" class="navbar-menu slideout">
-            <div class="navbar-end">
-                <a class="navbar-item" href="/#section_1">
-                    Section 1
-                </a>
-                <a class="navbar-item" href="/#section_2">
-                    Section 2
-                </a>
-            </div>
-        </div>
+        {% block navbar %}{% endblock %}
     {% endblock %}
 </nav>
 <section>
