--- a/templates/sections.html
+++ b/templates/sections.html
@@ -1,6 +1,18 @@
 {% extends 'default.html' %}
 {% set sections = ['Loan Information'] %}
 
+{% block navbar %}
+    <div id="main_navbar" class="navbar-menu slideout">
+        <div class="navbar-end">
+            {% for section in sections %}
+                <a class="navbar-item" href="/#{{ section|lower()|replace(' ', '_') }}">
+                    {{ section }}
+                </a>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
     <a id="{{ sections[0]|lower()|replace(' ', '_') }}"></a>
     <div class="hero is-dark">
