Correct section name

--- a/templates/sections.html
+++ b/templates/sections.html
@@ -1,5 +1,5 @@
 {% extends 'default.html' %}
-{% set sections = ['Loan Information'] %}
+{% set sections = ['Home'] %}
 
 {% block navbar %}
     <div id="main_navbar" class="navbar-menu slideout">
