Change section colour

--- a/templates/sections.html
+++ b/templates/sections.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <a id="{{ sections[0]|lower()|replace(' ', '_') }}"></a>
-    <div class="hero is-dark">
+    <div class="hero is-info">
         <div class="hero-body">
             <h1 class="title">{{ sections[0] }}</h1>
             {% block section0_content %}
