--- a/templates/default.html
+++ b/templates/default.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='sass_styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
+    <script type="text/javascript" id="MathJax-script" async
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
+    <script id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
+    </script>
     <script type='text/javascript' src='{{ url_for('static', filename='scripts.js') }}'></script>
 </head>
 <body>
